--- a/index.html
+++ b/index.html
@@ -8,6 +8,21 @@
     <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
+ <header>
+  <div class="head">
+    <img src="img/Logo.png" alt="Logo">
+    <h1>Toboolist</h1>
+
+
+  </div>
+
+ </header>
+ <main>
+
+ </main>
+ <footer>
+
+ </footer>
     
 </body>
 </html>
