Creo Prima sezione main

--- a/index.html
+++ b/index.html
@@ -18,6 +18,19 @@
 
  </header>
  <main>
+  <div class="corps">
+    <input class="bottone" type="button" value="Add Task">
+    <input class="bottone2" type="text" placeholder="Add Section">
+    <hr>
+    <h2>&#9662; New task</h2>
+    <span> <span>&#10003</span> Quarterly Newsletter</span>
+    <input class="bottone bottone1" type="button" value="Editorial">
+
+   
+
+
+  </div>
+
 
  </main>
  <footer>
